# Noto

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  STRUCTURE.md
assets/: LICENCE.TODO
crate/vel-core/: Cargo.toml
crate/vel-gui/: Cargo.toml
crates/noto-core/: Cargo.toml
crates/noto-core/src/: lib.rs
crates/noto-protocol/: Cargo.toml  LICENCE.TODO
crates/noto-protocol/src/: lib.rs
crates/noto-sandbox/: Cargo.toml
crates/noto-sandbox/src/: lib.rs
crates/noto-server/: Cargo.toml
crates/vel-core/: Cargo.toml
crates/vel-core/src/: editor.rs  lib.rs
crates/vel-core/src/editor/: action.rs  cursor.rs  document.rs  history.rs
crates/vel-gui/: Cargo.toml
crates/vel-gui/src/: lib.rs
crates/vel-native/: Cargo.toml
crates/vel-render/: Cargo.toml
crates/vel-render/src/: lib.rs
crates/vel-web/: Cargo.toml
docs/: Admin-Panel.md  Architecture.md
noto-core/: Cargo.toml
noto-server/: Cargo.toml  Rocket.toml  build.rs  test.sh
noto-server/src/: main.rs
noto-server/vel-web/: Cargo.toml  LICENCE.TODO
noto-server/vel-web/sites/: editor.html.tera  login.html.tera
noto-server/vel-web/sites/css/: main.css
noto-server/vel-web/src/: lib.rs  main.rs
vel-native/: Cargo.toml
vel-native/src/: main.rs
vel-render/: Cargo.toml
