[package]
name = "noto-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = [ "secrets", "json", "tls", "mtls", "msgpack" ] }
rocket_dyn_templates = {version = "0.2.0", features = [ "handlebars", "tera" ] }

[dependencies.noto-core]
path = "../crates/noto-core"

[dependencies.noto-protocol]
path = "../crates/noto-protocol"